--- a/Index.html
+++ b/Index.html
@@ -9,18 +9,20 @@
 <body>
     <div class="container">
         <h1>ID identifier</h1>
+        <small>Consider people from 1950 to Present Date</small>
         <div class="form">
             <form action="">
 
             <label for="" class="label">ID Number:  
-                <input type="number"  placeholder="ENTER" class="input">
+                <input type="text"  placeholder="ENTER" class="input">
 
             </label>
             <br>
           
         <button type="button" class="submit">Submit</button>
-    </form>
+            </form>
         </div>
+        <div class="res"></div>
     </div>
 
     <script src="script/code.js"></script>
